--- a/index.html
+++ b/index.html
@@ -1,7 +1,38 @@
 <!DOCTYPE html>
-<html>
+<html lang = "en">
+<head>
+<meta charset = "utf-8"/>
+<meta name=" description" content = "Website for the over-engineered apartment list I made for my college apartment"/>
+<meta name = "keywords" contents = "apartment, college, over-engineered"/>
+<link href="main.css" rel="stylesheet">
+</head>
+<title>
+</title>
 <body>
-<h1> Test Yo </h1>
-<p> something</p>
+	<div class="nav">
+		<div class = "container">
+<nav>
+<ul>
+<li><a href="index.html">Home</a></li>
+<li><a href="MainApartmentLists.html">Apartment Lists</a></li>
+<li><a href="Information.html">Information</a></li>
+<li><a href="More.html">More Things</a></li>
+<li><a href="Settings.html">Options/Settings</a></li>
+</ul>
+</nav>
+</div>
+</div>
+<div class = "header">
+<header>
+<h1> Down by the Riverside </h1>
+<p><em> The future home of the apartment list for USC-Columbia students.
+
+</em></p>
+</header>
+</div>
+
+<div class = "layout">
+	<h1> Select a list </h1>
+	
 </body>
 </html>
