--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang = "en">
 <head>
 <meta charset = "utf-8"/>
-<meta name=" description" content = "Website for the over-engineered apartment list I made for my college apartment"/>
-<meta name = "keywords" contents = "apartment, college, over-engineered"/>
+<meta name=" description" content = "Website for engineering projects and engineering projects of a Mechanical Engineering Student"/>
+<meta name = "keywords" contents = "projects, college, engineering, blog, cars"/>
 <link href="main.css" rel="stylesheet">
 </head>
 <title>
@@ -14,20 +14,17 @@
 <nav>
 <ul>
 <li><a href="index.html">Home</a></li>
-<li><a href="MainApartmentLists.html">Apartment Lists</a></li>
-<li><a href="Information.html">Information</a></li>
-<li><a href="More.html">More Things</a></li>
-<li><a href="Settings.html">Options/Settings</a></li>
+<li><a href="Projects.html">Engineering Projects</a></li>
+<li><a href="About.html">About Me</a></li>
+<li><a href="Blog.html">Blog</a></li>
+<li><a href="CarGarage.html">Garage</a></li>
 </ul>
 </nav>
 </div>
 </div>
 <div class = "header">
 <header>
-<h1> Down by the Riverside </h1>
-<p><em> The future home of the apartment list for USC-Columbia students.
-
-</em></p>
+<h1> Does this show up? </h1>
 </header>
 </div>
 
