--- a/Blog.html
+++ b/Blog.html
@@ -1,20 +1,10 @@
 <!DOCTYPE html>
-<html lang = "en">
-	<head>
-		<link href = "http://s3.amazonaws.com/codecademy-content/courses/ltp/css/bootstrap.css">
-
-		<script>type ="text/javascript" src= "placeholder.js"</script>
-
-		<meta charset = "utf-8"/>
-		<meta name=" description" content = "Website for the over-engineered apartment list I made for my
- college apartment"/>
-<meta name = "keywords" contents = "apartment, college, over-engineered"/>
-
-<link href="Lists.css" rel="stylesheet">
-
-</head>
-<title>
-</title>
+<html>
+<head>
+	<meta charset="utf-8">
+	<meta name= "viewport" content="width=device-width, initial-scale=1">
+	<link rel = "stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css">
+	</head>
 <body>
 <div class = "nav">
 <div class = "container">
@@ -28,22 +18,30 @@
 </ul>
 </nav>
 </div>
+	<header>
+		<h1> Welcome to the Blog</h1>
 </div>
-<div class = "header">
-<header>
-<h1> Bathroom Lists </h1>
-<p><em> The future home of the list for the apartment website. List can just be double since the bathroom don't have to be different
-
-</em></p>
-</header>
+<div class = "jumbotron">
+	<div class="row">
+  <div class="col-md-4">
+    <h3>First Blog Post</h3>
+    <p>Blog Content Goes Here</p>
+  </div>
+  <div class="col-md-4">
+    <h3>Second Blog Post</h3>
+    <p>Blog Content Goes Here</p>
+  </div>
+  <div class="col-md-4">
+    <h3>Third Blog Post</h3>
+    <p>Blog Content Goes Here</p>
+  </div>
 </div>
-<div class = "buttons">
-<button onclick ="addItem">Add Item </button>
-<button onclick= "editList">Edit List </button>
-<button onclick= "closeList">Close List </button>
-
-</div>
-<p> List will go here, probably using a javascript.</p>
-
-</body>
+<footer id="footer">
+<p>copyright text </p>
+ </footer>
+ </div>
+	</div>
+	</body>
 </html>
+	
+		
