--- a/Projects.html
+++ b/Projects.html
@@ -35,6 +35,11 @@
 
 </em></p>
 </header>
+	<nav>
+		<ul>
+			<li><a href = "WebsiteDoc.html">Website Project</a></li>
+		</ul>
+	</nav>
 </div>
 
 </body>
