--- a/Projects.html
+++ b/Projects.html
@@ -35,11 +35,14 @@
 
 </em></p>
 </header>
-	<nav>
+<div class = "nav1">
+	<nav1>
 		<ul>
 			<li><a href = "WebsiteDoc.html">Website Project</a></li>
+			<li><a href = "Printer.html">Reviving a 3D printer</a></li>
+			<li><a href = "Pinball.html">Tabletop Pinball Machine</a></li>
 		</ul>
-	</nav>
+	</nav1>
 </div>
 
 </body>
