--- a/WebsiteDoc.html
+++ b/WebsiteDoc.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
-<html>
+<html lang = "en">
 <head>
 	<meta charset="utf-8">
-	<meta name= "viewport" content="width=device-width, initial-scale=1">
+	<meta http-equiv = "X-UA=Compatible" content = "IE = edge, chrome = 1" >
 	<link rel = "stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css">
+	<meta name = "description" content = "">
+	<meta name = "author" content= ""> 
+	<meta name = "viewport" content"width=device-width; initial-scale = 1.0">
 	</head>
 <body>
-<div class = "nav">
-<div class = "container">
-<nav>
+<div id= "wrapper">
+	<header id = "header">
+		<h1> Something</h1>
+<nav class = "navigation">
 <ul>
 <li><a href="index.html">Home</a></li>
 <li><a href="Projects.html">Engineering Projects</a></li>
@@ -17,29 +21,15 @@
 <li><a href="CarGarage.html">Garage</a></li>
 </ul>
 </nav>
+	</header>
+<div id="content" class = "clearfix">
+	<section id = "left-sidebar">
+		<p> Something about a sidebar </p>
+	</section>
 </div>
-	<header>
-		<h1> Welcome to the Blog</h1>
-</div>
-<div class = "jumbotron">
-	<div class="row">
-  <div class="col-md-4">
-    <h3>First Blog Post</h3>
-    <p>Blog Content Goes Here</p>
-  </div>
-  <div class="col-md-4">
-    <h3>Second Blog Post</h3>
-    <p>Blog Content Goes Here</p>
-  </div>
-  <div class="col-md-4">
-    <h3>Third Blog Post</h3>
-    <p>Blog Content Goes Here</p>
-  </div>
-</div>
-<footer id="footer">
-<p>copyright text </p>
- </footer>
- </div>
+	<footer>
+		<p> Something at the footer </p>
+	</footer>
 	</div>
 	</body>
 </html>
