--- a/Blog.html
+++ b/Blog.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8">
 	<meta name= "viewport" content="width=device-width, initial-scale=1">
 	<link rel = "stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css">
+        <link href="blog.css" rel="stylesheet">	
 	</head>
 <body>
 <div class = "nav">
