--- a/CarGarage.html
+++ b/CarGarage.html
@@ -6,8 +6,7 @@
 		<script>type ="text/javascript" src= "placeholder.js"</script>
 
 		<meta charset = "utf-8"/>
-		<meta name=" description" content = "Website for the over-engineered apartment list I made for my
- college apartment"/>
+		<meta name=" description" content = "Personal Website I made. This is a link to my car instagram"/>
 <meta name = "keywords" contents = "apartment, college, over-engineered"/>
 
 <link href="Lists.css" rel="stylesheet">
@@ -31,19 +30,11 @@
 </div>
 <div class = "header">
 <header>
-<h1> Bathroom Lists </h1>
-<p><em> The future home of the list for the apartment website. List can just be double since the bathroom don't have to be different
+<h1> Car Garage </h1>
 
-</em></p>
-</header>
-</div>
-<div class = "buttons">
-<button onclick ="addItem">Add Item </button>
-<button onclick= "editList">Edit List </button>
-<button onclick= "closeList">Close List </button>
-
-</div>
-<p> List will go here, probably using a javascript.</p>
+	<!-- SnapWidget -->
+<script src="https://snapwidget.com/js/snapwidget.js"></script>
+<iframe src="https://snapwidget.com/embed/635959" class="snapwidget-widget" allowtransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden; width:100%; "></iframe>
 
 </body>
 </html>
