--- a/CarGarage.html
+++ b/CarGarage.html
@@ -31,7 +31,7 @@
 <div class = "header">
 <header>
 <h1> Car Garage </h1>
-
+	</header>
 	<!-- SnapWidget -->
 <script src="https://snapwidget.com/js/snapwidget.js"></script>
 <iframe src="https://snapwidget.com/embed/635959" class="snapwidget-widget" allowtransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden; width:100%; "></iframe>
