--- a/Pinball.html
+++ b/Pinball.html
@@ -31,7 +31,8 @@
 <div class = "header">
 <header>
 <h1> Pinball Wizard! </h1>
-<p><em> This is the main page to showcase the pinball project I have started.
+<p><em> This is the main page to showcase the pinball project I have started. This page will showcase schematics, pictures, videos, and other 
+	pieces of the build so stay tuned!
 
 </em></p>
 </header>
