--- a/Projects.html
+++ b/Projects.html
@@ -39,7 +39,7 @@
 	<nav1>
 		<ul>
 			<li><a href = "WebsiteDoc.html">Website Project</a></li>
-			<li><a href = "Printer.html">Reviving a 3D printer</a></li>
+			<li><a href = "GradCap.html">Decking out my college graduation cap</a></li>
 			<li><a href = "Pinball.html">Tabletop Pinball Machine</a></li>
 		</ul>
 	</nav1>
