--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
 </div>
 <div class = "header">
 <header>
-<h1> Does this show up? </h1>
+<h1> Welcome to my website! I started making this website to showcase my engineering projects and to learn and grow in web development.
+	It is by no means finished so sit around as I learn things myself</h1>
 </header>
 </div>
 
