--- a/About.html
+++ b/About.html
@@ -31,9 +31,11 @@
 </div>
 <div class = "header">
 <header>
-<h1> Bathroom Lists </h1>
-<p><em> The future home of the list for the apartment website. List can just be double since the bathroom don't have to be different
-
+<h1> A little about me </h1>
+<p><em> It was a cold and rainy day in October. My parents had given up hope that I would be born that day but little did they know I was
+	starting a trend of being late. In high school I did FRC robotics and was captain of my team my senior year (2014). I was part of the programming team
+	and my love for robotics and programming started there. At the time of writing this I am finishing up my last year of college where in the spring
+	I will obtain a BSE in Mechanical Engineering.
 </em></p>
 </header>
 </div>
