--- a/About.html
+++ b/About.html
@@ -16,19 +16,15 @@
 <title>
 </title>
 <body>
-<div class = "nav">
-<div class = "container">
-<nav>
-<ul>
-<li><a href="index.html">Home</a></li>
-<li><a href="Projects.html">Engineering Projects</a></li>
-<li><a href="About.html">About Me</a></li>
-<li><a href="Blog.html">Blog</a></li>
-<li><a href="CarGarage.html">Garage</a></li>
-</ul>
-</nav>
-</div>
-</div>
+<div class = "topnav">
+	<a class = " active"
+	href = "index.html">Home</a>
+	<a href = "Projects.html">Engineering Projects</a>
+	<a href = "About.html">About Me</a>
+	<a href = "Blog.html">Blog</a>
+	<a href = "CarGarage.html">Garage</a>
+	</div>
+	
 <div class = "header">
 <header>
 <h1> A little about me </h1>
@@ -39,13 +35,6 @@
 </em></p>
 </header>
 </div>
-<div class = "buttons">
-<button onclick ="addItem">Add Item </button>
-<button onclick= "editList">Edit List </button>
-<button onclick= "closeList">Close List </button>
-
-</div>
-<p> List will go here, probably using a javascript.</p>
 
 </body>
 </html>
