--- a/Blog.html
+++ b/Blog.html
@@ -7,21 +7,14 @@
         <link href="blog.css" rel="stylesheet">	
 	</head>
 <body>
-<div class = "nav">
-<div class = "container">
-<nav>
-<ul>
-<li><a href="index.html">Home</a></li>
-<li><a href="Projects.html">Engineering Projects</a></li>
-<li><a href="About.html">About Me</a></li>
-<li><a href="Blog.html">Blog</a></li>
-<li><a href="CarGarage.html">Garage</a></li>
-</ul>
-</nav>
-</div>
-	<header>
-		<h1> Welcome to the Blog</h1>
-</div>
+<div class = "topnav">
+	<a class = " active"
+	href = "index.html">Home</a>
+	<a href = "Projects.html">Engineering Projects</a>
+	<a href = "About.html">About Me</a>
+	<a href = "Blog.html">Blog</a>
+	<a href = "CarGarage.html">Garage</a>
+	</div>
 <div class = "jumbotron">
 	<div class="row">
   <div class="col-md-4">
