--- a/index.html
+++ b/index.html
@@ -9,19 +9,14 @@
 <title>
 </title>
 <body>
-	<div class="nav">
-		<div class = "container">
-<nav>
-<ul>
-<li><a href="index.html">Home</a></li>
-<li><a href="Projects.html">Engineering Projects</a></li>
-<li><a href="About.html">About Me</a></li>
-<li><a href="Blog.html">Blog</a></li>
-<li><a href="CarGarage.html">Garage</a></li>
-</ul>
-</nav>
-</div>
-</div>
+<div class = "topnav">
+	<a class = " active"
+	href = "index.html">Home</a>
+	<a href = "Projects.html">Engineering Projects</a>
+	<a href = "About.html">About Me</a>
+	<a href = "Blog.html">Blog</a>
+	<a href = "CarGarage.html">Garage</a>
+	</div>
 <div class = "header">
 <header>
 <h2> Welcome to my website! I started making this website to showcase my engineering projects and to learn and grow in web development.
