--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <meta name=" description" content = "Website for engineering projects and engineering projects of a Mechanical Engineering Student"/>
 <meta name = "keywords" contents = "projects, college, engineering, blog, cars"/>
 <link href="main.css" rel="stylesheet">
+<link href = "Lists.css" rel = "stylesheet">
 </head>
 <title>
 </title>
