--- a/Blog.html
+++ b/Blog.html
@@ -5,6 +5,7 @@
 	<meta name= "viewport" content="width=device-width, initial-scale=1">
 	<link rel = "stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css">
         <link href="blog.css" rel="stylesheet">	
+	<link href = "Lists.css" rel = "stylesheet">
 	</head>
 <body>
 <div class = "topnav">
