--- a/Projects.html
+++ b/Projects.html
@@ -34,8 +34,8 @@
 	<nav1>
 		<ul>
 			<li><a href = "WebsiteDoc.html">Website Project</a></li>
-			<li><a href = "GradCap.html">Decking out my college graduation cap</a></li>
 			<li><a href = "Pinball.html">Tabletop Pinball Machine</a></li>
+			<li><a href = "LEDcube.html">LED Cube</a></li>
 		</ul>
 	</nav1>
 </div>
