--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<a href = "Projects.html">Engineering Projects</a>
 	<a href = "About.html">About Me</a>
 	<a href = "Blog.html">Blog</a>
-	<a href = "CarGarage.html">Garage</a>
+	<a href = "Contact.html">Contact Me </a>
 	</div>
 <div class = "header">
 <header>
