--- a/About.html
+++ b/About.html
@@ -10,7 +10,7 @@
  college apartment"/>
 <meta name = "keywords" contents = "apartment, college, over-engineered"/>
 
-<link href="Lists.css" rel="stylesheet">
+<link href="about.css" rel="stylesheet">
 
 </head>
 <title>
@@ -22,18 +22,22 @@
 	<a href = "Projects.html">Engineering Projects</a>
 	<a href = "About.html">About Me</a>
 	<a href = "Blog.html">Blog</a>
-	<a href = "CarGarage.html">Garage</a>
+	<a href = "Contact.html">Contact Me</a>
 	</div>
 	
-<div class = "header">
+<div class = "blurbs">
 <header>
 <h1> A little about me </h1>
+</header>
+<div>
 <p><em> It was a cold and rainy day in October. My parents had given up hope that I would be born that day but little did they know I was
 	starting a trend of being late. In high school I did FRC robotics and was captain of my team my senior year (2014). I was part of the programming team
 	and my love for robotics and programming started there. At the time of writing this I am finishing up my last year of college where in the spring
 	I will obtain a BSE in Mechanical Engineering.
 </em></p>
-</header>
+</div>
+<div> placeholder for a photo</div>
+
 </div>
 
 </body>
