--- a/About.html
+++ b/About.html
@@ -6,9 +6,8 @@
 		<script>type ="text/javascript" src= "placeholder.js"</script>
 
 		<meta charset = "utf-8"/>
-		<meta name=" description" content = "Website for the over-engineered apartment list I made for my
- college apartment"/>
-<meta name = "keywords" contents = "apartment, college, over-engineered"/>
+		<meta name=" description" content = "Website to showcase my learning in engineering as well as a good way to contact me"/>
+		<meta name = "keywords" contents = "college, over-engineered, engineering, learning, robots, programming, youtube"/>
 
 <link href="about.css" rel="stylesheet">
 
@@ -36,7 +35,10 @@
 	I will obtain a BSE in Mechanical Engineering.
 </em></p>
 </div>
-<div> placeholder for a photo</div>
+<div> placeholder for a photo, add linkedin and github buttons underneath.
+<!-- <img src = "___" width __ height ___>-->
+
+</div>
 
 </div>
 
