--- a/Blog.html
+++ b/Blog.html
@@ -9,27 +9,27 @@
 	</head>
 <body>
 <div class = "topnav">
-	<a class = " active"
-	href = "index.html">Home</a>
+	<a href = "index.html">Home</a>
 	<a href = "Projects.html">Engineering Projects</a>
 	<a href = "About.html">About Me</a>
-	<a href = "Blog.html">Blog</a>
-	<a href = "CarGarage.html">Garage</a>
+	<a class = "active" href = "Blog.html">Blog</a>
+	<a href = "Contact.html">Contact Me</a>
 	</div>
 <div class = "jumbotron">
-	<div class="row">
-  <div class="col-md-4">
-    <h3>First Blog Post</h3>
-    <p>Blog Content Goes Here</p>
-  </div>
-  <div class="col-md-4">
-    <h3>Second Blog Post</h3>
-    <p>Blog Content Goes Here</p>
-  </div>
-  <div class="col-md-4">
-    <h3>Third Blog Post</h3>
-    <p>Blog Content Goes Here</p>
-  </div>
+<article>
+	<header>
+		<h1> Creating a new website </h1>
+		<p> Published: <time pubdate = "pubdate"> 2019-06-10</time></p>
+	</header>
+	<p> The text I will do off camera would go here</p>
+</article>
+<article>
+	<header>
+		<h1> Trying to Find Motivation after graduation </h1>
+		<p> Published: <time pubdate = "pubdate"> 2019-06</time></p>
+	</header>
+	<p> The text I will do off camera would go here</p>
+</article>
 </div>
 <footer id="footer">
 <p>copyright text </p>
