--- a/Projects.html
+++ b/Projects.html
@@ -7,7 +7,7 @@
 
 		<meta charset = "utf-8"/>
 		<meta name=" description" content = "Website to showcase projects and engineering blog"/>
-<meta name = "keywords" contents = "cars, college, engineering, projects"/>
+<meta name = "keywords" contents = "college, over-engineered, engineering, learning, robots, programming, youtube"/>
 
 <link href="Lists.css" rel="stylesheet">
 
@@ -16,17 +16,16 @@
 </title>
 <body>
 <div class = "topnav">
-	<a class = " active"
-	href = "index.html">Home</a>
-	<a href = "Projects.html">Engineering Projects</a>
+	<a href = "index.html">Home</a>
+	<a class = "active" href = "Projects.html">Engineering Projects</a>
 	<a href = "About.html">About Me</a>
 	<a href = "Blog.html">Blog</a>
-	<a href = "CarGarage.html">Garage</a>
+	<a href = "Contact.html">Contact Me</a>
 	</div>
 <div class = "header">
 <header>
 <h1> Projects </h1>
-<p><em> Projects big and small that I want to showcase.
+<p><em> Projects big and small that I want to showcase to you all.
 
 </em></p>
 </header>
@@ -36,6 +35,9 @@
 			<li><a href = "WebsiteDoc.html">Website Project</a></li>
 			<li><a href = "Pinball.html">Tabletop Pinball Machine</a></li>
 			<li><a href = "LEDcube.html">LED Cube</a></li>
+			<li><a href = "Audirings.html">LED Audi Rings </a></li>
+			<li><a href = "Minecraft.html">Minecraft projects</a></li>
+			<li> More to Come</li>
 		</ul>
 	</nav1>
 </div>
