--- a/About.html
+++ b/About.html
@@ -13,21 +13,18 @@
 
 </head>
 <title>
+	A little about me
 </title>
 <body>
 <div class = "topnav">
-	<a class = " active"
-	href = "index.html">Home</a>
+	<a href = "index.html">Home</a>
 	<a href = "Projects.html">Engineering Projects</a>
-	<a href = "About.html">About Me</a>
+	<a class = " active" href = "About.html">About Me</a>
 	<a href = "Blog.html">Blog</a>
 	<a href = "Contact.html">Contact Me</a>
 	</div>
 	
 <div class = "blurbs">
-<header>
-<h1> A little about me </h1>
-</header>
 <div>
 <p><em> It was a cold and rainy day in October. My parents had given up hope that I would be born that day but little did they know I was
 	starting a trend of being late. In high school I did FRC robotics and was captain of my team my senior year (2014). I was part of the programming team
