--- a/Contact.html
+++ b/Contact.html
@@ -25,5 +25,6 @@
 
 	<div class = "mainstuff"> 
 		<p> Want to contact me? Grate! You can contact me from this email: (insert email here) or from fiver here</p>
+	</div>
 
 	
