--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
 	</div>
 <div class = "header">
 <header>
-<h2> Welcome to my website! I started making this website to showcase my engineering projects and to learn and grow in web development.
-	It is by no means finished so sit around as I learn things myself</h2>
+<h2> Welcome to my website! Thank you for coming to my personal website and I hope you stick around! </h2>
+	<h3> I started making this website to showcase my engineering projects and showcase my learning in web development.
+	It is by no means finished so sit around as I learn things and constantly update this website. <br>If you would like to see what I am learning and planning to do with website then click this <a href ="WebsiteDoc.html"> link</a> to see the work going into this website.   </h3>
 </header>
 </div>
 	
