--- a/Pinball.html
+++ b/Pinball.html
@@ -15,18 +15,13 @@
 <title>
 </title>
 <body>
-<div class = "nav">
-<div class = "container">
-<nav>
-<ul>
-<li><a href="index.html">Home</a></li>
-<li><a href="Projects.html">Engineering Projects</a></li>
-<li><a href="About.html">About Me</a></li>
-<li><a href="Blog.html">Blog</a></li>
-<li><a href="CarGarage.html">Garage</a></li>
-</ul>
-</nav>
-</div>
+<div class = "topnav">
+	<a class = " active"
+	href = "index.html">Home</a>
+	<a href = "Projects.html">Engineering Projects</a>
+	<a href = "About.html">About Me</a>
+	<a href = "Blog.html">Blog</a>
+	<a href = "Contact.html">Contact Me </a>
 </div>
 <div class = "header">
 <header>
