--- a/WebsiteDoc.html
+++ b/WebsiteDoc.html
@@ -26,6 +26,9 @@
 	<section id = "left-sidebar">
 		<p> Something about a sidebar </p>
 	</section>
+	<h1> Why this was started....
+		for future reference when talking about the popup https://pythonspot.com/tk-message-box/ 
+	</h1>
 </div>
 	<footer>
 		<p> Something at the footer </p>
